# URCnav

./: README.md
turtlebot3_ws/: frames_2025-01-15_12.48.27.gv
turtlebot3_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
turtlebot3_ws/install/aruco_marker_detection/lib/aruco_marker_detection/: aruco_detection_node
turtlebot3_ws/install/aruco_marker_detection/share/aruco_marker_detection/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
turtlebot3_ws/install/dynamixel_sdk/include/dynamixel_sdk/: dynamixel_sdk.h  group_bulk_read.h  group_bulk_write.h  group_fast_bulk_read.h  group_fast_sync_read.h  group_handler.h  group_sync_read.h  group_sync_write.h  packet_handler.h  port_handler.h  port_handler_arduino.h  port_handler_linux.h  port_handler_mac.h  port_handler_windows.h  protocol1_packet_handler.h  protocol2_packet_handler.h
turtlebot3_ws/install/dynamixel_sdk/share/dynamixel_sdk/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
turtlebot3_ws/install/dynamixel_sdk_custom_interfaces/share/dynamixel_sdk_custom_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
turtlebot3_ws/install/dynamixel_sdk_examples/lib/dynamixel_sdk_examples/: read_write_node
turtlebot3_ws/log/: latest_build  latest_list
turtlebot3_ws/src/aruco_marker_detection/: CMakeLists.txt  setup.cfg  setup.py
turtlebot3_ws/src/aruco_marker_detection/aruco_marker_detection/: aruco_detection_node.py
(+460 files in other folders)
